fix animation collapse et footer

--- a/src/components/Agencement/footer.scss
+++ b/src/components/Agencement/footer.scss
@@ -9,7 +9,8 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-
+    position: relative;
+    margin-top: 5%;
     @include mediamobile() {
         gap: 15px;
     }
